# CurrencyPairs

./: .env  .gitignore  .pylintrc  README.md  alembic.ini  db.py  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
bwg/currency_pairs/: app.py  containers.py  logging_config.py  main.py
bwg/currency_pairs/services/: binance_service.py  coingecko.py  processor.py
bwg/currency_pairs_api/: app.py  containers.py  exception_handlers.py  logging_config.py
bwg/currency_pairs_api/config/: gunicorn_fastapi_conf.py
bwg/currency_pairs_api/endpoints/v1/: currency_pairs.py
bwg/currency_pairs_api/services/: currency_pairs.py
bwg/lib/: database.py
bwg/lib/models/: currency_pairs.py
bwg/lib/postgres/: containers.py  database.py
bwg/lib/repositories/: base.py  currency_pairs.py
config/: config.yml
currency_pairs/: app.py  container.py  env_config.py
currency_pairs/endpoints/v1/: test.py
currency_pairs_api/: app.py  containers.py
currency_pairs_api/config/: gunicorn_fastapi_conf.py
currency_pairs_api/endpoints/v1/: test.py
currency_pairs_api/services/: reverse_url.py
deployment/: Dockerfile  prometheus.yml
migration/: env.py
migration/versions/: 38689305c4fc_initial.py  47d84c88f427_initial.py  a995993042f2_init.py  b4af24cca7e6_initial.py  c0d32971fa9e_init.py  e97fe577937c_initial.py
src/currency_pairs/: app.py  containers.py  logging_config.py  main.py
src/currency_pairs/services/: coingecko.py  processor.py
src/currency_pairs_api/: app.py  containers.py  env_config.py  logging_config.py  middleware.py
src/currency_pairs_api/config/: gunicorn_fastapi_conf.py
src/currency_pairs_api/endpoints/v1/: currency_pairs.py
src/currency_pairs_api/services/: coingecko.py  currency_pairs.py  reverse_url.py
src/lib/: database.py  setup_logger.py
src/lib/models/: base.py  currency_pairs.py
src/lib/monitoring/: __init__.py  containers.py
src/lib/monitoring/metric_clients/: __init__.py  fastapi_metrics_service.py
src/lib/monitoring/prometheus_monitoring/: __init__.py  data_storage.py  exporters.py  metrics.py  metrics_executor.py  prometheus.py  schedule.py  transport.py
src/lib/monitoring/prometheus_monitoring/extensions/: utils.py  values.py
src/lib/postgres/: __init__.py  database.py
src/lib/repositories/: base.py  currency_pairs.py
tests/: locustfile.py
