[tool.poetry]
name = "CurrencyPairs"
version = "0.1.0"
description = ""
authors = ["Nikolay Chernikov <n.chernikov@sxope.com>"]
readme = "README.md"
packages = [{include = "bwg"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.104.1"
pytest-dotenv = "^0.5.2"
gunicorn = "^21.2.0"
uvicorn = "^0.27.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pylint = "^3.0.3"
mypy = "^1.8.0"
pycoingecko = "^3.1.0"
dependency-injector = {version = "^4.38.0", extras = ["yaml"]}
SQLAlchemy = {version = "^1.4.27", extras = ["mypy"]}
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
locust = "^2.21.0"
setuptools = "^69.0.3"
prometheus-client = "^0.17.0"
prometheus-fastapi-instrumentator = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
currency-pairs-worker = "bwg.currency_pairs.main:run"